# cookiecutter-pypackage

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  LICENSE.txt  README.md  conda_environment.yaml  setup.cfg
